Trying to fix display on mobile devices.

--- a/css/home.css
+++ b/css/home.css
@@ -8,30 +8,49 @@ html, body {
 
 html {
     font-family: "Montserrat";
-    width: 100%;
 }
 
 body {
+    width: 100%;
+    min-height: 100%;
+
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-
-    height: 100vh;
-    min-height: 100%;
 }
 
 main {
+    margin-top: 80px; /* Margin top set to logo/header height */
+    margin-bottom: 30px;
+
     display: flex;
-    flex: 0 0 calc(100vh - 35px);  /* dynamically adjust */
+    flex: 0 0 calc(100vh - 110px);  /* dynamically adjust */
     flex-wrap: wrap;
 	align-items: center;
     justify-content: center;
 }
 
-main > input {
-    width: 500px;
+#input-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#input-container > .cursor {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-top: 5px solid transparent;
+    border-left: 10px solid black;
+    border-bottom: 5px solid transparent;
+    animation: blinker 1s linear infinite;
+}
+
+#input-container > input {
+    width: 6rem;
+
     border: 0;
     outline: 0;
     background: transparent;
@@ -42,13 +61,26 @@ main > input {
     font-size: 1rem;
 }
 
-main > input:focus {
-    border-bottom: 3px solid #11998e;
+#input-container > label {
+    max-width: 18rem;
+    padding-top: 10px;
+
+    text-align: center;
+    font-family: inherit;
+    font-size: 1rem;
+    color: rgb(115, 115, 115);
 }
 
-main > #gldiv {
-    width: 80vw;
-    height: 80vh;
+#viewer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 70vw;
+}
+
+#viewer-container > #gldiv {
+    width: 70vw;
+    height: 70vh;
 }
 
 /* For some reason, the GLViewer canvas element
@@ -62,38 +94,39 @@ canvas {
     border-color: rgb(200, 200, 200, 0.25);
 }
 
-main > #colorbar-container {
-    height: 40px;
-    width: 40vw;
-
-    display: flex;
-    flex-wrap: wrap;
-}
-
-main > #colorbar-container > #colorbar {
-    width: 100%;
+#viewer-container > #colorbar {
+    margin-top: 20px;  /* to account for canvas border */
     height: 20px;
+    max-width: 70vw;
+
     flex-basis: 100%;
     background-image: linear-gradient(to right, red, white, blue);
 }
 
-main > #colorbar-container > span {
+#viewer-container > span {
     flex-basis: auto;
     flex-grow: 1;
 
-    font-size: 0.9em;
+    font-size: 0.9rem;
 }
 
-main > #colorbar-container > #colorbar-label-r {
+#viewer-container > #colorbar-label-r {
     text-align: right;
 }
 
 footer {
-    flex: 0 0 30px;
-    font-size: 0.8em;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 30px; /* Set the fixed height of the footer here */
+    text-align: center; /* Horizontally center the text */
+
+    font-size: 0.8rem;
     color: rgb(115, 115, 115);
 }
 
+
+/* Classes */
 
 /* Hidden/Visible toggles */
 .visible {
@@ -103,3 +136,16 @@ footer {
 .hidden {
     display: none !important;
 }
+
+.flex-break {
+    flex-basis: 100%;
+    height: 0;
+}
+
+/* Animations */
+
+@keyframes blinker {
+    30% {
+      opacity: 0;
+    }
+  }
